Fix log output page line number alignment issue in Firefox

--- a/src/components/LogOutputPage/LogOutputPage.scss
+++ b/src/components/LogOutputPage/LogOutputPage.scss
@@ -17,6 +17,7 @@
 
   li {
     display: block;
+    height: 22px; // Need this to keep heights the same in Firefox
 
     div {
       display: inline-block;
